containers/k0s/kube-deploy-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-net8-worker-deployment
  labels:
    app: test-net8-worker
spec:
  selector:
    matchLabels:
      app: test-net8
  replicas: 1
  template:
    metadata:
      labels:
        app: test-net8
    spec:
      containers:
      - name: test-net8
        image: atlmag/test-net8-worker:latest
        resources:
          limits:
            memory: 256Mi
            cpu: "250m"
          requests:
            memory: 128Mi
            cpu: "80m"
