containers/k0s/deploy-test-net8-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-net8-web-deployment
  labels:
    app: test-net8-web
spec:
  selector:
    matchLabels:
      app: test-net8-web
  replicas: 2
  template:
    metadata:
      labels:
        app: test-net8-web
    spec:
      containers:
      - name: test-net8-web
        image: atlmag/test-net8-web:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: 256Mi
            cpu: "250m"
          requests:
            memory: 128Mi
            cpu: "80m"
---
apiVersion: v1
kind: Service
metadata:
  name: test-net8-web-service
spec:
  selector:
    app: test-net8-web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
