containers/k0s/deploy-webdir-listing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webdir-listing-deployment
  labels:
    app: webdir-listing
spec:
  selector:
    matchLabels:
      app: webdir-listing
  replicas: 1
  template:
    metadata:
      labels:
        app: webdir-listing
    spec:
      containers:
      - name: webdir-listing
        image: atlmag/webdir-listing:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: webdir-listing-service
spec:
  selector:
    app: webdir-listing
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
