containers/k0s/kube-deply-example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-net8-web-deployment
  labels:
    app: test-net8
spec:
  selector:
    matchLabels:
      app: test-net8
  replicas: 2
  template:
    metadata:
      labels:
        app: test-net8
    spec:
      containers:
      - name: test-net8
        image: atlmag/test-net8-web:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: 256Mi
            cpu: "250m"
          requests:
            memory: 128Mi
            cpu: "80m"
---
apiVersion: v1
kind: Service
metadata:
  name: test-net8
spec:
  selector:
    app: test-net8
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30081   
  type: NodePort
