containers/k0s/deploy-test-net8-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-net8-web-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: kube.atle.guru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-net8-web-service
            port:
              number: 8080
