containers/k0s/deploy-webdir-listing-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webdir-listing-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: web.atle.guru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webdir-listing-service
            port:
              number: 8000
