containers/k0s/k3s.test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      name: site-nginx-frontend
  template:
    metadata:
      labels:
        name: site-nginx-frontend
    spec:
      containers:
      - name: blog
        image: alesson23/site:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: site-nginx-service
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    name: site-nginx-frontend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site-nginx-ingress
  annotations:
    #app.kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: small.atle.guru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: site-nginx-service
            port:
              number: 80
